fix dark mode

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -73,10 +73,21 @@
 
 }
 
-/* [data-md-color-scheme="slate"] { */
+/* link colour in dark (slate) */
+[data-md-color-scheme=slate][data-md-color-primary=black] {
+    --md-typeset-a-color: #96776f;
+
+}
+
+/* highlight color in dark(slate) */
+[data-md-color-scheme=slate]{
+    --md-typeset-mark-color: #afaf0060
+}
+
+[data-md-color-scheme="slate"] {
     /* --md-default-fg-color: hsla(var(--md-hue), 15%, 90%, 1); */
-    /* --md-default-bg-color: hsla(var(--md-hue), 0%, 11%, 1); */
-/* } */
+    --md-default-bg-color: hsla(var(--md-hue), 0%, 7%, 0);
+}
 
 /* dark-mode for iframe (google map) */
 
